<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="56dp">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/replaceflag_app_name"
            android:drawableLeft="@mipmap/replaceflag_logo"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:background="#ffffff"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/img"
                    android:layout_width="35dp"
                    android:layout_margin="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_height="35dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/name"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/version"
                        android:textSize="13sp"
                        android:textColor="@color/replaceflag_color3"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/replaceflag_tip31"
                android:textStyle="bold"
                android:drawableLeft="@drawable/replaceflag_ic_email_warning_icon"
                android:drawablePadding="4dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/replaceflag_color5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/replaceflag_tip32"
                android:textStyle="bold"
                android:background="@color/replaceflag_color6"
                android:paddingLeft="10dp"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:layout_height="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/replaceflag_tip33"
                android:textColor="@color/replaceflag_color3"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/replaceflag_tip34"
                android:textColor="@color/replaceflag_color3"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/replaceflag_tip35"
                android:textStyle="bold"
                android:background="@color/replaceflag_color6"
                android:paddingLeft="10dp"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:layout_height="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/replaceflag_tip36"
                android:textColor="@color/replaceflag_color3"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/replaceflag_tip37"
                android:textStyle="bold"
                android:background="@color/replaceflag_color6"
                android:paddingLeft="10dp"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:layout_height="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/replaceflag_tip38"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/pkg_tv"
                android:layout_width="wrap_content"
                android:textColor="@color/replaceflag_color3"
                android:layout_marginHorizontal="10dp"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/replaceflag_tip39"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/replaceflag_color3"
                    android:text="@string/replaceflag_tip40"
                    android:layout_marginRight="10dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="dfhdfhdfghjsdfgdfbrte"
                    android:visibility="gone"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/replaceflag_color6"
                android:layout_height="70dp">
                <TextView
                    android:id="@+id/remove"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:textColor="#ffffff"
                    android:layout_centerInParent="true"
                    android:textSize="14sp"
                    android:background="@color/replaceflag_color7"
                    android:text="@string/replaceflag_tip9"
                    android:layout_height="50dp"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
