<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e6e7e8">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:src="@drawable/replaceflag_black_back"
            android:paddingHorizontal="10dp"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/replaceflag_summary"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/bg_ll"
                android:layout_width="match_parent"
                android:background="#19673D"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/replaceflag_ic_scan_success_shield"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/replaceflag_tip"
                    android:layout_width="wrap_content"
                    android:text="@string/replaceflag_tip15"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/replaceflag_tip2"
                    android:layout_width="wrap_content"
                    android:text="@string/replaceflag_tip6"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/scan"
                    android:background="@drawable/replaceflag_round_4_white"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:layout_width="wrap_content"
                    android:text="@string/replaceflag_scan"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:background="#e6e7e8"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:background="#ffffff"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:src="@drawable/replaceflag_ic_websecurity_tile"
                        android:layout_margin="15dp"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/replaceflag_tip17"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/replaceflag_color2"
                            android:textSize="10sp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/replaceflag_tip18"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/replaceflag_color4"
                            android:textSize="13sp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/replaceflag_tip19"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/replaceflag_color3"
                            android:layout_marginRight="16dp"
                            android:textSize="12sp"
                            android:layout_marginBottom="10dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/open1"
                    android:layout_width="match_parent"
                    android:text="@string/replaceflag_tip20"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/replaceflag_color1"
                    android:background="#ffffff"
                    android:layout_marginTop="1dp"
                    android:layout_height="50dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="#e6e7e8"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:background="#ffffff"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:src="@drawable/replaceflag_ic_widget_tile"
                        android:layout_margin="15dp"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/replaceflag_tip21"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/replaceflag_color4"
                            android:textSize="13sp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/replaceflag_tip22"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/replaceflag_color3"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="10dp"
                            android:textSize="12sp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/open2"
                    android:layout_width="match_parent"
                    android:text="@string/replaceflag_tip23"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/replaceflag_color1"
                    android:background="#ffffff"
                    android:layout_marginTop="1dp"
                    android:layout_height="50dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="#e6e7e8"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:background="#ffffff"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:src="@drawable/replaceflag_ic_capture_cam_tile"
                        android:layout_margin="15dp"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/replaceflag_tip24"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/replaceflag_color4"
                            android:textSize="13sp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/replaceflag_tip25"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/replaceflag_color3"
                            android:layout_marginBottom="10dp"
                            android:textSize="12sp"
                            android:layout_marginRight="16dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/open3"
                    android:layout_width="match_parent"
                    android:text="@string/replaceflag_tip20"
                    android:gravity="center"
                    android:background="#ffffff"
                    android:textColor="@color/replaceflag_color1"
                    android:textSize="15sp"
                    android:layout_marginTop="1dp"
                    android:layout_height="50dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="#e6e7e8"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:background="#ffffff"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:src="@drawable/replaceflag_ic_appprofile_tile"
                        android:layout_margin="15dp"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/replaceflag_tip17"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/replaceflag_color2"
                            android:textSize="10sp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/replaceflag_tip26"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/replaceflag_color4"
                            android:textSize="13sp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/replaceflag_tip27"
                            android:textColor="@color/replaceflag_color3"
                            android:layout_marginBottom="10dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginTop="4dp"
                            android:textSize="12sp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/open4"
                    android:layout_width="match_parent"
                    android:text="@string/replaceflag_tip28"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/replaceflag_color1"
                    android:background="#ffffff"
                    android:layout_marginTop="1dp"
                    android:layout_height="50dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="#e6e7e8"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:background="#ffffff"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:src="@drawable/replaceflag_ic_vpn_tile"
                        android:layout_margin="15dp"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/replaceflag_tip17"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/replaceflag_color2"
                            android:textSize="10sp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/replaceflag_tip29"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/replaceflag_color4"
                            android:textSize="13sp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/replaceflag_tip30"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/replaceflag_color3"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="10dp"
                            android:textSize="12sp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/open5"
                    android:layout_width="match_parent"
                    android:text="@string/replaceflag_tip17"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:background="#ffffff"
                    android:textColor="@color/replaceflag_color1"
                    android:layout_marginTop="1dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="dfhdfhdfghjsdfgdfbrte"
                    android:visibility="gone"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
