<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88000000">


    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/replaceflag_round_2_white"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/replaceflag_tip_ll"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/replaceflag_tip46"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_gravity="center_horizontal"
                android:layout_margin="24dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/replaceflag_tip47"
                android:layout_marginHorizontal="26dp"
                android:textSize="14sp"
                android:textColor="@color/replaceflag_color3"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/ok"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:textColor="#ffffff"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp"
                android:textSize="14sp"
                android:background="@color/replaceflag_color7"
                android:text="@string/replaceflag_tip48"
                android:layout_height="50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="dfhdfhdfghjsdfgdfbrte"
                android:visibility="gone"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
